Fix code example spacing

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -89,6 +89,7 @@ a.page-not-created {
     border-radius: 4px;
     color: var(--code-default);
     font: var(--type-code-regular);
+    margin-bottom: 2rem;
     padding: 1rem;
     position: relative;
 
